stderr
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! @ lint: `eslint --config ${CYBER_DOJO_SANDBOX}/.eslintrc.json /**/*.js`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the @ lint script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /home/sandbox/.npm/_logs/2023-02-10T04_36_08_257Z-debug.log
FAIL ./align_columns.test.js
  â— Test suite failed to run

    SyntaxError: /sandbox/align_columns.test.js: Identifier 'sampleTextTwoLines' has already been declared (23:6)

      21 | aaa bbb`;
      22 | 
    > 23 | const sampleTextTwoLines = `aaa$bbb
         |       ^
      24 | aaa$bbb`;
      25 | const alignedTextTwoLines = `aaa bbb
      26 | aaa bbb`;

      at Parser._raise (../etc/jest/node_modules/@babel/parser/src/parser/error.js:60:45)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        1.487 s
Ran all test suites.
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! @ test: `jest --coverage`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the @ test script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /home/sandbox/.npm/_logs/2023-02-10T04_36_10_685Z-debug.log
